
0.11 (01/05/2005)
    (ms) Added suggestion by Richard Lippmann <lippmann@sprachtheorie.de>
         to allow for invisible graphs, just used as base for later 
         'cdef' calculations. Since leaving 'type' out will have
         RRDTool::OO default to 'line', type => 'hidden' is used to
         indicate the graph shouldn't be drawn. 

0.10 (11/20/2004)
    (ms) Added legends to graph()
    (ms) Maxence Gerbedoen <maxxenceg@wanadoo.fr> suggested a patch to 
         add 'cdef' functionality. Added slightly differently.

0.09 (10/08/2004)
    (ms) Fixed bug [cpan #7897]. new() now accepts a raise_error setting.

0.08 (09/24/2004)
    (ms) Added documentation for multiple data sources and archives.
    (ms) Martin Kurahaupo <martin@kurahaupo.gen.nz> added a patch
         to prevent the test suite from failing when run as root
         because a test file can't be write-protected.
    (ms) Chris Fedde <cfedde@denver.pm.org> provided a patch to 
         structure ::info's output more perl-like. Got input from
         perlmonks (thanks nobull!) on how to efficiently transform
         RRDTools info output into Perl data structures.

0.07 (08/15/2004)
    (ms) doc and test fixes for new rrdtool release 1.0.49. dump()
         and restore() are now supported.

0.06 (06/21/2004)
    (ms) added 'start' param in create() docs
    (ms) JJ Knitis <jj@dangercreative.com> provided a fix for
         multiple 'color' settings in graph. Added new graph/color
         syntax.

0.05 (05/26/2004)
    (ms) added support for dump() and restore(). Test cases in
         t/007Dump.t will wait until these functions are 
         available in rrdtool, and are skipped until then.
    (ms) Some graph options don't have parameters, they can
         specified via option_name => undef now.
    (ms) Added lower_limit graph option
    (ms) Added eg/graph.pl as a graph example

0.04 05/22/2004
    (ms) added more functionality to graph(), new test cases.